--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <style>
   /* ============================================================
      Growfax Official — FULL UI stylesheet (futuristic neon/fax)
-     - Long, self-contained styling to match the original.
-     - Dark/light theme variables, responsive rules, micro-animations.
+     - Mobile-First Optimization Applied
      ============================================================ */
 
   :root{
@@ -41,111 +40,119 @@
   }
 
   html,body{height:100%;margin:0;font-family:var(--mono);background:var(--bg);color:var(--text);line-height:1.6;transition:background .25s,color .25s}
+  
   /* -------------------------
-     Header / Navigation
+     Header / Navigation (Optimasi Mobile: Flex-wrap dan penyusutan font)
      ------------------------- */
   header{background:var(--card-bg);box-shadow:var(--card-shadow);position:sticky;top:0;z-index:1200}
-  .header-content{max-width:1100px;margin:0 auto;padding:14px 20px;display:flex;justify-content:space-between;align-items:center;gap:12px}
+  .header-content{max-width:1100px;margin:0 auto;padding:14px 10px;display:flex;justify-content:space-between;align-items:center;gap:12px}
   .header-left{display:flex;align-items:center;gap:14px}
-  .brand-wrap{display:flex;align-items:center;gap:12px}
-  .brand-wrap img{width:46px;height:46px;border-radius:8px;object-fit:cover}
-  h1{font-size:1.4rem;margin:0;font-weight:700}
-  nav.primary a{color:var(--accent);text-decoration:none;font-weight:700;margin-left:12px}
-  nav.primary a:hover{opacity:.86;transform:translateY(-1px)}
-  .controls{display:flex;align-items:center;gap:10px}
-  .theme-toggle,.lang-select,.open-welcome{font-size:0.98rem;padding:8px 12px;border-radius:10px;border:1px solid var(--border-color);background:transparent;color:var(--text);cursor:pointer}
+  .brand-wrap{display:flex;align-items:center;gap:8px} /* Kurangi gap untuk mobile */
+  .brand-wrap img{width:36px;height:36px;border-radius:6px;object-fit:cover} /* Perkecil logo untuk mobile */
+  h1{font-size:1.2rem;margin:0;font-weight:700} /* Perkecil judul */
+  .brand-wrap > div > div { font-size: 0.75rem; } /* Perkecil subjudul */
 
+  nav.primary a{color:var(--accent);text-decoration:none;font-weight:700;margin-left:8px; font-size: 0.9rem;} /* Perkecil font nav */
+  nav.primary a:hover{opacity:.86;transform:translateY(-1px)}
+  .controls{display:flex;align-items:center;gap:8px}
+  .theme-toggle,.lang-select,.open-welcome{font-size:0.9rem;padding:6px 8px;border-radius:8px;border:1px solid var(--border-color);background:transparent;color:var(--text);cursor:pointer}
+  
   /* -------------------------
-     Banner / Hero
+     Banner / Hero (Optimasi Mobile: Padding lebih kecil)
      ------------------------- */
-  .banner-section{text-align:center;padding:56px 20px;background:linear-gradient(90deg, rgba(0,0,0,0.03), rgba(255,255,255,0.02))}
-  .banner-section img{max-width:240px;border-radius:10px;margin-bottom:18px}
-  .banner-section h2{font-size:1.9rem;color:#ffaa00;margin:8px 0;text-shadow:0 0 10px rgba(255,170,0,0.18)}
-  .banner-section p{font-size:1.05rem;opacity:.92;margin:0}
-  .time-display{margin-top:10px;font-size:0.98rem;font-weight:600;opacity:.9}
+  .banner-section{text-align:center;padding:40px 10px;background:linear-gradient(90deg, rgba(0,0,0,0.03), rgba(255,255,255,0.02))}
+  .banner-section img{max-width:200px;border-radius:8px;margin-bottom:14px}
+  .banner-section h2{font-size:1.6rem;color:#ffaa00;margin:8px 0;text-shadow:0 0 10px rgba(255,170,0,0.18)}
+  .banner-section p{font-size:0.95rem;opacity:.92;margin:0}
+  .time-display{margin-top:8px;font-size:0.85rem;font-weight:600;opacity:.9}
 
   /* -------------------------
      Container (main content)
      ------------------------- */
-  .container{max-width:1000px;margin:48px auto;text-align:center;padding:0 18px}
-  .container h2{font-size:1.6rem;margin-bottom:28px}
-  .platform-buttons{display:flex;flex-wrap:wrap;justify-content:center;gap:20px}
-  .platform-buttons a{display:flex;align-items:center;justify-content:center;gap:12px;width:300px;padding:14px 18px;border-radius:12px;color:#fff;font-weight:700;text-decoration:none;border:1px solid transparent;font-size:1.02rem;transition:transform .18s ease,box-shadow .18s}
+  .container{max-width:1000px;margin:32px auto;text-align:center;padding:0 10px}
+  .container h2{font-size:1.4rem;margin-bottom:24px}
+  
+  /* Platform Buttons: Di mobile, paksa tombol memanjang penuh (92%) */
+  .platform-buttons{display:flex;flex-wrap:wrap;justify-content:center;gap:14px}
+  .platform-buttons a{
+    display:flex;align-items:center;justify-content:center;gap:12px;
+    width:92%; /* Full width for mobile */
+    padding:14px 18px;border-radius:12px;color:#fff;font-weight:700;
+    text-decoration:none;border:1px solid transparent;font-size:1.02rem;
+    transition:transform .18s ease,box-shadow .18s;
+  }
   .platform-buttons a img{width:30px;height:30px;border-radius:6px}
-  .platform-buttons a:hover{transform:translateY(-4px)}
-  .btn-android{background:#34c759;--glow:#4cff77;box-shadow:0 6px 24px rgba(76,255,119,0.08)}
-  .btn-windows{background:#0078d7;--glow:#4da3ff;box-shadow:0 6px 24px rgba(77,163,255,0.08)}
-  .btn-ios{background:#007aff;--glow:#7acbff;box-shadow:0 6px 24px rgba(122,203,255,0.08)}
-  .btn-powertunnel{background:#b71c1c;--glow:#ff5a5a;box-shadow:0 6px 24px rgba(255,90,90,0.08)}
+  .platform-buttons a:hover{transform:translateY(-2px)} /* Kurangi efek hover di mobile */
+
+  .btn-android{background:#34c759;--glow:#4cff77;box-shadow:0 4px 16px rgba(76,255,119,0.08)}
+  .btn-windows{background:#0078d7;--glow:#4da3ff;box-shadow:0 4px 16px rgba(77,163,255,0.08)}
+  .btn-ios{background:#007aff;--glow:#7acbff;box-shadow:0 4px 16px rgba(122,203,255,0.08)}
+  .btn-powertunnel{background:#b71c1c;--glow:#ff5a5a;box-shadow:0 4px 16px rgba(255,90,90,0.08)}
 
   /* -------------------------
-     Discord Section
+     Discord Section (Optimasi Mobile: Padding lebih kecil)
      ------------------------- */
-  .discord-section{background:var(--discord-color);color:#fff;padding:32px;border-radius:12px;max-width:820px;margin:42px auto 60px;text-align:center;box-shadow:var(--card-shadow)}
-  .discord-section img{width:58px;height:58px;border-radius:8px;margin-bottom:10px}
+  .discord-section{background:var(--discord-color);color:#fff;padding:24px;border-radius:10px;max-width:820px;margin:32px auto 50px;text-align:center;box-shadow:var(--card-shadow)}
+  .discord-section img{width:48px;height:48px;border-radius:8px;margin-bottom:8px}
 
   /* -------------------------
      Footer
      ------------------------- */
-  footer{text-align:center;margin:30px 0 40px;font-size:.95rem;opacity:.85}
+  footer{text-align:center;margin:30px 0 40px;font-size:.85rem;opacity:.85}
 
   /* -------------------------
-     Modal (file info)
+     Modal & Welcome Popup
      ------------------------- */
-  .modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:1300}
-  .modal{width:92%;max-width:560px;background:var(--card-bg);color:var(--text);border-radius:12px;padding:18px;box-shadow:0 14px 40px rgba(0,0,0,0.2);transform:translateY(16px);transition:transform .18s,opacity .18s}
-  .modal h3{margin:0 0 8px;font-size:1.15rem}
-  .modal p{margin:0 0 12px;color:var(--text);opacity:.9}
-  .modal .meta{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px}
-  .meta .chip{background:rgba(0,0,0,0.05);padding:6px 10px;border-radius:8px;font-weight:600}
-  [data-theme="dark"] .meta .chip{background:rgba(255,255,255,0.04)}
-  .modal .changelog{background:rgba(0,0,0,0.03);padding:8px;border-radius:8px;font-size:0.95rem;margin-bottom:12px}
-  [data-theme="dark"] .modal .changelog{background:rgba(255,255,255,0.03)}
-  .modal .buttons{display:flex;justify-content:flex-end;gap:10px}
-  .btn{padding:8px 12px;border-radius:8px;border:0;cursor:pointer;font-weight:700}
-  .btn.secondary{background:transparent;border:1px solid var(--border-color)}
-  .btn.primary{background:var(--accent);color:#fff}
+  .modal-backdrop, .welcome-backdrop{position:fixed;inset:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:1300}
+  .modal, .welcome{width:92%;max-width:560px;background:var(--card-bg);color:var(--text);border-radius:12px;padding:16px;box-shadow:0 14px 40px rgba(0,0,0,0.2);transform:translateY(0);transition:transform .18s,opacity .18s}
+  .modal h3{margin:0 0 8px;font-size:1.05rem}
+  .modal p{margin:0 0 10px;font-size:0.95rem;opacity:.9}
+  .modal .changelog{font-size:0.9rem;}
 
   /* -------------------------
-     Welcome popup
+     Floating Discord button (Optimasi Mobile: Jarak lebih kecil)
      ------------------------- */
-  .welcome-backdrop{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg, rgba(0,0,0,0.4), rgba(0,0,0,0.6));z-index:1400}
-  .welcome{width:92%;max-width:520px;background:var(--card-bg);color:var(--text);padding:20px;border-radius:12px;box-shadow:0 18px 48px rgba(0,0,0,0.28)}
-  .welcome h2{margin:0 0 8px}
-  .welcome .row{display:flex;gap:10px;align-items:center;margin:10px 0}
-  .welcome label{min-width:90px;font-weight:700}
-  .welcome select,.welcome input[type="radio"]{padding:8px;border-radius:8px}
-  .welcome .actions{display:flex;justify-content:flex-end;gap:8px;margin-top:12px}
-
-  /* -------------------------
-     Floating Discord button
-     ------------------------- */
-  .floating-chat{position:fixed;right:18px;bottom:18px;width:56px;height:56px;border-radius:50%;background:var(--discord-color);display:flex;align-items:center;justify-content:center;color:#fff;box-shadow:0 8px 24px rgba(0,0,0,0.2);cursor:pointer;z-index:1500}
-  .floating-chat img{width:28px;height:28px;border-radius:6px}
+  .floating-chat{position:fixed;right:12px;bottom:12px;width:48px;height:48px;border-radius:50%;background:var(--discord-color);display:flex;align-items:center;justify-content:center;color:#fff;box-shadow:0 6px 18px rgba(0,0,0,0.2);cursor:pointer;z-index:1500}
+  .floating-chat img{width:24px;height:24px;border-radius:4px}
 
   /* -------------------------
      Toast message
      ------------------------- */
-  .toast{position:fixed;left:50%;transform:translateX(-50%);bottom:86px;background:var(--toast-bg);color:#fff;padding:8px 12px;border-radius:10px;opacity:0;pointer-events:none;transition:opacity .18s,transform .18s;z-index:1600}
-  [data-theme="dark"] .toast{color:#fff}
+  .toast{position:fixed;left:50%;transform:translateX(-50%);bottom:70px;background:var(--toast-bg);color:#fff;padding:8px 12px;border-radius:10px;opacity:0;pointer-events:none;transition:opacity .18s,transform .18s;z-index:1600}
+  
+  /* ===========================
+     PC/Desktop Optimizations (Min-width 600px)
+     =========================== */
+  @media (min-width: 600px) {
+    /* Header/Nav kembali ke ukuran besar */
+    .header-content{padding:14px 20px;}
+    .brand-wrap img{width:46px;height:46px;border-radius:8px}
+    h1{font-size:1.4rem;}
+    .brand-wrap > div > div { font-size: 0.85rem; }
+    nav.primary a{margin-left:12px; font-size: 1rem;}
+    .controls{gap:10px}
+    .theme-toggle,.lang-select,.open-welcome{font-size:0.98rem;padding:8px 12px;}
 
-  /* Typing animation helper (kept for possible future use) */
-  .typing-container{display:inline-flex;align-items:center;gap:8px;color:var(--muted);font-size:0.95rem}
-  .typing-dots{display:inline-block;position:relative;width:26px;height:10px}
-  .typing-dots span{position:absolute;left:0;top:0;width:6px;height:6px;border-radius:50%;background:var(--muted);opacity:0;transform:translateY(0)}
-  .typing-dots span:nth-child(1){left:0;animation:dotAnim 1s infinite 0s}
-  .typing-dots span:nth-child(2){left:8px;animation:dotAnim 1s infinite 0.16s}
-  .typing-dots span:nth-child(3){left:16px;animation:dotAnim 1s infinite 0.32s}
-  @keyframes dotAnim{
-    0%{opacity:0;transform:translateY(0)}
-    30%{opacity:1;transform:translateY(-5px)}
-    60%{opacity:1;transform:translateY(0)}
-    100%{opacity:0;transform:translateY(0)}
+    /* Tombol Unduhan kembali ke layout 300px */
+    .platform-buttons{gap:20px}
+    .platform-buttons a{
+      width:300px; /* Lebar tetap untuk desktop */
+    }
+    .platform-buttons a:hover{transform:translateY(-4px)} /* Efek hover lebih besar */
+
+    /* Banner/Content padding besar */
+    .banner-section{padding:56px 20px;}
+    .banner-section img{max-width:240px;border-radius:10px;}
+    .banner-section h2{font-size:1.9rem;}
+    .container{margin:48px auto;padding:0 18px}
+    .container h2{font-size:1.6rem;margin-bottom:28px}
+    .discord-section{padding:32px;margin:42px auto 60px;}
+
+    /* Floating button kembali ke posisi normal */
+    .floating-chat{right:18px;bottom:18px;width:56px;height:56px;}
+    .floating-chat img{width:28px;height:28px;}
+    .toast{bottom:86px;}
   }
-
-  .typing-indicator{font-size:0.9rem;color:var(--muted);opacity:.95}
-
-  @media (max-width:600px){ .platform-buttons a{width:92%} }
 </style>
 </head>
 <body data-theme="light">
@@ -270,9 +277,6 @@
 <script>
 /* ============================================================
    Growfax Official — FULL script
-   - All logic in one place: translations, theme, time, modal,
-     download info, welcome popup.
-   - CPU Mapping, Webhook, and Bug Report logic REMOVED.
    ============================================================ */
 
 /* ===========================
@@ -304,7 +308,7 @@ let pendingDownload = null;
 
 /* ===========================
    File metadata
-   - PowerTunnel entry for copy-text confirmed
+   - PowerTunnel: Copy-text
    =========================== */
 const FILE_META = {
   virtualhost: { version: 'v2.1', updated: 'Oct 29, 2025', changelog: '- Fixed host parsing\\n- Improved TLS handling', size: '2.3 KB' },
@@ -543,8 +547,7 @@ document.querySelectorAll('.platform-buttons a').forEach(a=>{
 });
 
 /* ===========================
-   Misc small UI effects (already present)
-   - Removed CPU Mapping and Report Bug code
+   Misc small UI effects
    =========================== */
 
 // status indicator pulse if present
